fix overflow main container customers

--- a/src/styles/_customers.scss
+++ b/src/styles/_customers.scss
@@ -1,7 +1,7 @@
 .customerContainer {
   background-color: white;
   overflow: scroll;
-  height: 60vh;
+  height: 80vh;
   border-radius: 10px;
   margin-top: 25px;
   padding: 15px;
@@ -33,10 +33,6 @@ td {
 }
 
 @include media-up(sm) {
-  .listCustomers {
-    display: block;
-    width: 50vh;
-  }
   .customersDevice {
     display: none;
   }
